# rustc-analysis-recreation-package

./: .gitignore  README.md  workfile.md
documents/: categorization.md
rustc-analysis/: Cargo.toml  db_scheme_setup.sql
rustc-analysis/src/rustc_private_utils/: analysis_callback.rs  fn_dep_analysis.rs  mod.rs
rustc-analysis/src/utils/: analysis_results.rs  cargo_metadata.rs  cli.rs  crate_metadata_index.rs  db.rs  directed_graph.rs  github.rs  mod.rs
shell_scripts/: cargo_check.sh  dep_analysis.sh  runtime_direct_dependency_analysis.sh  runtime_indirect_dependency_analysis.sh
